--- a/codigo/GoCar/perfil/perfil.css
+++ b/codigo/GoCar/perfil/perfil.css
@@ -53,46 +53,52 @@ header .links li a {
     width: 100%;
 }
 
-.edit-main-container {
+/*FIM HEADER*/
 
-    width: 100%;
-    max-width: 768px;
-    margin: auto;
-    margin-top: 20px;
+
+.profile-container img {
+
+    width: 120px;
+    height: auto;
+    align-items: center;
 }
 
-.edit-image-container {
-
-    width: 100%;
-    max-width: 100px;
-    margin: auto;
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
-
-.edit-image-container img {
-
-    width: 100px;
-    height: 100px;
-}
-
-.edit-image-container button {
-    width: 110px;
+.profile-container input {
+    margin-top: 10px;
+    background-color: #252a34;
+    color: #d6d8e9;
     border: none;
-    margin-top: 5px;
-    background-color: white;
-    color: #3897f0;
-    font-size: 16px;
+    height: 60px;
+    outline: none;
+    border-radius: 8px;
+    padding-left:10px;
+}
 
+.profile-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #080707df;
+    border-radius: 10px;
+    padding: 30px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    width: 50%
+}
+
+.profile-container form {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
 }
 
 input[type="file"] {
     display: none;
 }
 
-label {
+.area-perfil label {
     padding: 5px 10px;
-    width: 100px;
+    width: 100%;
     background: #161616df;
     color: white;
     display: block;
@@ -111,34 +117,15 @@ label:hover {
 
 .area-perfil {
     display: flex;
-    height: 55vh;
+    height: 109vh;
     justify-content: center;
     align-items: center;
-}
-
-.area-editar-foto{
-    display: flex;
-    height: 22vh;
-    justify-content: center;
-    align-items: center;
-}
-
-.edit-main-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #f34b4b;
-    border-radius: 50px;
-    padding: 0px;
-    margin-top: 100px;
-    margin-bottom: 100px;
-    width: 9%
 }
 
 
 .area-perfil label2{
-    padding: 10px 10px;
-    width: 200px;
+    padding: 10px 20px;
+    width: 100%;
     background: #f34b4b;
     margin-top: 10px;
     color: white;
@@ -155,28 +142,13 @@ label:hover {
     background: white;    
 }
 
-.profile-container input {
-    margin-top: 10px;
-    background-color: #252a34;
-    color: #d6d8e9;
-    border: none;
-    height: 60px;
-    outline: none;
-    border-radius: 8px;
-    padding-left:30px;
+
+input::placeholder {
+    color: #CBD0F7;
+    font-size: 14px;
+  
 }
 
-.profile-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #080707df;
-    border-radius: 10px;
-    padding: 30px;
-    margin-top: 100px;
-    margin-bottom: 100px;
-    width: 40%
-}
 
 /*FOOTER*/
 .footer {
